--- a/user.html
+++ b/user.html
@@ -1,10 +1,7 @@
 <html>
-    <title>hllo</title>
+    <title>wellcom in my page</title>
     <body>
         <h1>hello</h1>
-        <form action="https://6711-197-147-152-207.ngrok-free.app/user/user.php" method="post">
-            <input type="text" name="name" id="">
-            <button type="submit"></button>
-        </form>
+        <h2>start soon </h2>
     </body>
 </html>
