--- a/user.html
+++ b/user.html
@@ -1,7 +1,116 @@
-<html>
-    <title>wellcom in my page</title>
-    <body>
-        <h1>hello</h1>
-        <h2>start soon </h2>
-    </body>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campus Marrakech</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: url('img0.jpeg') center/cover no-repeat;
+        }
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            padding: 20px;
+        }
+        .content {
+            display: flex;
+            width: 80%;
+            max-width: 1100px;
+            background: rgba(255, 255, 255, 0.41);
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .left {
+            flex: 1;
+            padding: 20px;
+        }
+        .left img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .right {
+            flex: 1;
+            background: #008c5f;
+            padding: 20px;
+            border-radius: 10px;
+            color: white;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        input, select {
+            width: 98%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+        }
+        .submit-btn {
+            background: #f04e30;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="content">
+            <div class="left">
+                <img src="img1.png" alt="Campus Image">
+            </div>
+            <div class="right">
+                <h2>Inscriptions Ouvertes 2025/2026</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="formation">Formation*</label>
+                        <select id="formation">
+                            <option>electro sima</option>
+                            <option>electro bhima</option>
+                            <option>electro chhima</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="prenom">Prénom*</label>
+                        <input type="text" id="prenom">
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Nom*</label>
+                        <input type="text" id="nom">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail*</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="residence">Votre pays de résidence*</label>
+                        <input type="text" id="residence">
+                    </div>
+                    <div class="form-group">
+                        <label for="ville">Ville*</label>
+                        <input type="text" id="ville">
+                    </div>
+                    <div class="form-group">
+                        <label for="telephone">Numéro de téléphone*</label>
+                        <input type="tel" id="telephone">
+                    </div>
+                    <button class="submit-btn">Envoyer</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
