--- a/user.html
+++ b/user.html
@@ -2,44 +2,51 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bac+3</title>
+    <title>BAC+3</title>
     <style>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
             background: url('img0.jpeg') center/cover no-repeat;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
         }
         .container {
-            width: 90%;
-            max-width: 1100px;
+            position: relative;
+            width: 100%;
+            max-width: 1200px;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .content {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(255, 255, 255, 0.3);
+            width: 90%;
+            max-width: 1100px;
+            background: rgba(255, 255, 255, 0.71);
             padding: 20px;
             border-radius: 10px;
-            backdrop-filter: blur(5px);
         }
         .left {
             flex: 1;
-            min-width: 300px;
             padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .left img {
             width: 100%;
+            max-width: 300px;
             border-radius: 10px;
         }
         .right {
             flex: 1;
-            min-width: 300px;
-            background: rgba(0, 140, 95, 0.9);
+            background:rgba(0, 140, 96, 0.92);
             padding: 20px;
             border-radius: 10px;
             color: white;
@@ -66,62 +73,63 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
-            width: 100%;
         }
+        
         @media (max-width: 768px) {
-            .container {
+            .content {
                 flex-direction: column;
-                text-align: center;
+                align-items: center;
             }
-            .right {
+            .left, .right {
                 width: 100%;
+                text-align: center;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="left">
-            <img src="img1.png" alt="Campus Image">
-        </div>
-        <div class="right">
-            <h2>Inscriptions Ouvertes 2025/2026</h2>
-            <form>
-                <div class="form-group">
-                    <label for="formation">Formation*</label>
-                    <select id="formation">
-                        <option>Veuillez sélectionner</option>
-                      <option>electronique sima</option>
-                      <option>electronique bhima</option>
-                      <option>electronique chhima</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="prenom">Prénom*</label>
-                    <input type="text" id="prenom">
-                </div>
-                <div class="form-group">
-                    <label for="nom">Nom*</label>
-                    <input type="text" id="nom">
-                </div>
-                <div class="form-group">
-                    <label for="email">E-mail*</label>
-                    <input type="email" id="email">
-                </div>
-                <div class="form-group">
-                    <label for="residence">Votre pays de résidence*</label>
-                    <input type="text" id="residence">
-                </div>
-                <div class="form-group">
-                    <label for="ville">Ville*</label>
-                    <input type="text" id="ville">
-                </div>
-                <div class="form-group">
-                    <label for="telephone">Numéro de téléphone*</label>
-                    <input type="tel" id="telephone">
-                </div>
-                <button class="submit-btn">Envoyer</button>
-            </form>
+        <div class="content">
+            <div class="left">
+                <img src="img1.png" alt="Campus Image">
+            </div>
+            <div class="right">
+                <h2>Inscriptions Ouvertes 2025/2026</h2>
+                <form method="post" 
+                action="https://wondrous-select-stallion.ngrok-free.app/user/doc.php">
+                    <div class="form-group">
+                        <label for="formation">Formation*</label>
+                        <select id="formation">
+                            <option>Veuillez sélectionner</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="prenom">Prénom*</label>
+                        <input type="text" id="prenom">
+                    </div>
+                    <div class="form-group">
+                        <label for="nom">Nom*</label>
+                        <input type="text" id="nom">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail*</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="residence">Votre pays de résidence*</label>
+                        <input type="text" id="residence">
+                    </div>
+                    <div class="form-group">
+                        <label for="ville">Ville*</label>
+                        <input type="text" id="ville">
+                    </div>
+                    <div class="form-group">
+                        <label for="telephone">Numéro de téléphone*</label>
+                        <input type="tel" id="telephone">
+                    </div>
+                    <button class="submit-btn">Envoyer</button>
+                </form>
+            </div>
         </div>
     </div>
 </body>
