--- a/user.html
+++ b/user.html
@@ -46,7 +46,7 @@
         }
         .right {
             flex: 1;
-            background:rgba(0, 140, 96, 0.92);
+            background:rgba(0, 140, 96, 0.88);
             padding: 20px;
             border-radius: 10px;
             color: white;
@@ -60,7 +60,7 @@
             margin-bottom: 5px;
         }
         input, select {
-            width: 100%;
+            width: 99%;
             padding: 10px;
             border: none;
             border-radius: 5px;
@@ -101,6 +101,10 @@
                         <label for="formation">Formation*</label>
                         <select id="formation">
                             <option>Veuillez sélectionner</option>
+                            <option>Électronique de Puissance et Énergie</option>
+                            <option>Télécommunications et Réseaux</option>
+                            <option>Robotique et Automatisme Industriel</option>
+                            <option>Instrumentation et Capteurs Intelligents</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -128,6 +132,14 @@
                         <input type="tel" id="telephone">
                     </div>
                     <button class="submit-btn">Envoyer</button>
+                    <div class="social-links">
+                    <p>Si vous avez des questions, visitez-nous sur :</p>
+                    <a href="https://jobmarc.github.io/SUP_lice_profe/prof" 
+                    target="_blank">Instagram</a>
+                    <a href="https://jobmarc.github.io/SUP_lice_profe/SUP_MARC" 
+                    target="_blank">Facebook</a>
+                </div>
+                    
                 </form>
             </div>
         </div>
