--- a/user.html
+++ b/user.html
@@ -103,7 +103,10 @@
                             <option>Veuillez sélectionner</option>
                             <option>Électronique de Puissance et Énergie</option>
                             <option>Télécommunications et Réseaux</option>
+                            <option>Communication et Design digital</option>
                             <option>Robotique et Automatisme Industriel</option>
+                            <option>Intelligence Artificielle</option>
+                            <option>Responsable du développement des affaires</option>
                             <option>Instrumentation et Capteurs Intelligents</option>
                         </select>
                     </div>
