--- a/prof.html
+++ b/prof.html
@@ -60,10 +60,20 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-in-out;
 }
+            input{
+        display: none;
+    }
+    label{
+        display: none;
+    } 
+    #btn{
+        display: none;
+    }
 
 .instagram-button:hover {
   opacity: 0.9;
   transform: scale(1.05);
+    
 }
 
        
